<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:scrollbars="vertical">


	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical"
		android:padding="5dp">
		<LinearLayout android:orientation="vertical"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:paddingTop="10sp">

			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/name"></TextView>
			<EditText android:layout_width="fill_parent" android:singleLine="true"
				android:layout_height="wrap_content" android:hint="@string/name"
				android:maxLength="30" android:id="@+id/edit_collection_name"></EditText>
			<LinearLayout android:orientation="vertical"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:paddingTop="10sp">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/base_language"></TextView>
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="fill_parent">
					<ImageView android:id="@+id/edit_collection_base_language_image"
						android:src="@drawable/flag_english" android:layout_width="wrap_content"
						android:layout_height="wrap_content"></ImageView>
					<TextView android:id="@+id/edit_collection_base_language_name"
						android:layout_width="wrap_content" android:layout_weight="1"
						android:layout_height="wrap_content" android:text="English"
						android:paddingLeft="5sp"></TextView>
					<Button android:layout_height="wrap_content" android:text="@string/change"
						android:layout_width="wrap_content" android:width="100sp"
						android:id="@+id/edit_collection_change_base_language"></Button>
				</LinearLayout>
			</LinearLayout>

			<LinearLayout android:orientation="vertical"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:paddingTop="10sp">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/target_language"></TextView>
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="fill_parent">
					<ImageView android:id="@+id/edit_collection_target_language_image"
						android:src="@drawable/flag_spanish" android:layout_width="wrap_content"
						android:layout_height="wrap_content"></ImageView>
					<TextView android:id="@+id/edit_collection_target_language_name"
						android:layout_width="wrap_content" android:layout_weight="1"
						android:layout_height="wrap_content" android:paddingLeft="5sp"
						android:text="Spanish"></TextView>
					<Button android:layout_height="wrap_content" android:text="@string/change"
						android:layout_width="wrap_content" android:width="100sp"
						android:id="@+id/edit_collection_change_target_language"></Button>
				</LinearLayout>
			</LinearLayout>

			<LinearLayout android:gravity="center_horizontal"
				android:orientation="vertical" android:layout_height="wrap_content"
				android:layout_width="fill_parent">
				<TextView android:layout_width="fill_parent"
					android:id="@+id/edit_collection_max_new_words_title"
					android:layout_height="wrap_content" android:text="@string/priority_long" />

				<SeekBar android:id="@+id/edit_collection_priority"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:max="4"  android:paddingLeft="15dip" android:paddingRight="15dip"/>

				<CheckBox android:text="@string/collection_disabled"
					android:id="@+id/edit_collection_disabled" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_margin="10sp"></CheckBox>

			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:baselineAligned="false"
			android:gravity="center_horizontal">
			<Button android:layout_height="wrap_content" android:text="@string/ok"
				android:layout_width="wrap_content" android:width="100sp"
				android:id="@+id/edit_collection_ok"></Button>
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/cancel"
				android:width="100sp" android:id="@+id/edit_collection_cancel"></Button>


		</LinearLayout>
	</LinearLayout>
</ScrollView>