<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:gravity="center" android:orientation="vertical">
	<TextView android:layout_margin="10dip" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/how_many_new_words" />
	<com.atteo.langleo_trial.views.NumberPicker
		android:id="@+id/increase_limit_dialog_picker" android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center">
		<Button android:layout_weight="1" android:text="@string/ok" android:id="@+id/increase_limit_dialog_ok"
			android:layout_width="0dip" android:layout_height="wrap_content"></Button>
		<Button android:layout_weight="1" android:text="@string/cancel" android:id="@+id/increase_limit_dialog_cancel"
			android:layout_width="0dip" android:layout_height="wrap_content"></Button>
	</LinearLayout>
</LinearLayout>
