<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/LinearLayout01"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:padding="5dp">
	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/name"></TextView>
	<EditText android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:hint="@string/name"
		android:maxLength="30" android:id="@+id/edit_list_name"></EditText>

	<LinearLayout android:id="@+id/LinearLayout02"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:baselineAligned="false" android:gravity="center_horizontal">
		<Button android:layout_height="wrap_content" android:text="@string/ok"
			android:layout_width="wrap_content" android:width="100dp" android:id="@+id/edit_list_ok"></Button>
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/cancel"
			android:width="100dp" android:id="@+id/edit_list_cancel"></Button>


	</LinearLayout>


</LinearLayout>
