<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/FrameLayout01" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<ImageView android:id="@+id/ImageView01" android:src="@drawable/background"
		android:scaleType="centerCrop" android:layout_width="fill_parent"
		android:layout_height="fill_parent" />

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical"
		android:gravity="bottom">

		<com.atteo.langleo_trial.views.MainMenuButton android:text="@string/study" android:id="@+id/button_study"
			android:layout_height="wrap_content" android:drawableLeft="@drawable/main_study"
			android:layout_width="fill_parent" style="@style/Button" 
			android:layout_margin="5sp" android:layout_gravity="right" />
		<com.atteo.langleo_trial.views.MainMenuButton android:text="@string/manage_your_collections"
			android:id="@+id/button_manage" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:drawableLeft="@drawable/main_collections"
			android:layout_margin="5sp" style="@style/Button" />
		<com.atteo.langleo_trial.views.MainMenuButton android:text="@string/preferences" android:id="@+id/button_preferences"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:drawableLeft="@drawable/main_prefs" android:layout_margin="5sp"
			style="@style/Button"/>
		<com.atteo.langleo_trial.views.MainMenuButton android:text="@string/help" android:id="@+id/button_help"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:drawableLeft="@drawable/main_help" android:layout_margin="5sp"
			style="@style/Button" />

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="contact: langleo@atteo.com"
				android:layout_weight="1" />
			<TextView android:id="@+id/version_label" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="" />
		</LinearLayout>
	</LinearLayout>
</FrameLayout>